# Pleiades

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
pleiades/: Cargo.toml  memory.x
pleiades/.cargo/: config.toml
pleiades/src/: apds9960.rs  color.rs  firmware.rs  http.rs  led_matrix.rs  lib.rs  main.rs  perlin.rs  wifi.rs  world.rs  ws2812.rs
pleiades/src/world/: empty.rs  fire.rs  matrix.rs  norhten_light.rs  northen_light.rs  solid.rs  starry_night.rs  utils.rs  voronoi.rs
pleiades_macro_derive/: Cargo.toml
pleiades_macro_derive/src/: lib.rs
src/: led_matrix.rs  lib.rs  main.rs  perlin.rs  world.rs  ws2812.rs
src/led_matrix/: ws2812.rs
src/world/: fire.rs
