[package]
name = "pleiades"
version = "0.1.0"
edition = "2021"

[dependencies]
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
embassy-net = { version = "0.1.0", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
    "unstable-traits",
    "nightly",
] }
embassy-sync = { version = "0.2.0", features = ["nightly"] }
embassy-executor = { version = "0.2.0", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
] }
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
embedded-hal-async = "0.2.0-alpha.1"
atomic-polyfill = "0.1.5"
static_cell = "1.0"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
pio-proc = "0.2"
pio = "0.2.1"
heapless = "0.7.16"
smart-leds = "0.3.0"
fixed = "1.23.1"
fixed-macro = "1.2"
rand = { version = "0.8.5", default-features = false }
micromath = "1.1"
pleiades_macro_derive = { path = "../pleiades_macro_derive" }

[patch.crates-io]
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "70907d84f197d1c5d5d112ae1172e9070d41b730" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "70907d84f197d1c5d5d112ae1172e9070d41b730" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "70907d84f197d1c5d5d112ae1172e9070d41b730" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "70907d84f197d1c5d5d112ae1172e9070d41b730" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "70907d84f197d1c5d5d112ae1172e9070d41b730" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "70907d84f197d1c5d5d112ae1172e9070d41b730" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "70907d84f197d1c5d5d112ae1172e9070d41b730" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "70907d84f197d1c5d5d112ae1172e9070d41b730" }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "70907d84f197d1c5d5d112ae1172e9070d41b730" }
embassy-net-driver-channel = { git = "https://github.com/embassy-rs/embassy", rev = "70907d84f197d1c5d5d112ae1172e9070d41b730" }

[profile.dev]
debug = 2
debug-assertions = true
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 0
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
